--- a/src/style.css
+++ b/src/style.css
@@ -137,6 +137,31 @@ body {
     border-top: 1px solid #e5e5e5;
 }
 
+.panel-caption {
+    margin: 0;
+    font-size: 12px;
+    color: #5d6470;
+}
+
+.panel-caption a {
+    color: #3a7afe;
+    text-decoration: none;
+}
+
+.panel-caption a:hover {
+    text-decoration: underline;
+}
+
+.panel-input-row {
+    display: flex;
+    gap: 12px;
+}
+
+.panel-input-col {
+    flex: 1;
+    min-width: 0;
+}
+
 .panel-toggle {
     display: inline-flex;
     align-items: center;
