Adjust inline code line height

--- a/src/style.css
+++ b/src/style.css
@@ -186,6 +186,7 @@ body {
     background: #f0f2f8;
     border: 1px solid #d8dae6;
     color: #314a72;
+    line-height: 1.2;
 }
 
 .panel-input {
